[tool.poetry]
name = "id-flashbax"
version = "0.1.0"
description = ""
authors = ["Ryan Pégoud <ryanpegoud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flashbax = "^0.0.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
numpy = "^1.26.3"
jax = "^0.4.23"
jaxlib = "^0.4.23"
chex = "^0.1.85"
dm-haiku = "^0.0.11"
rlax = "^0.1.6"
optax = "^0.1.7"
distrax = "^0.1.5"
brax = "^0.9.4"
gymnax = "^0.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
